# vex

./: .envrc  .gitignore  ADVANCED_FEATURES_ROADMAP.md  ALLOCATOR_MIGRATION.md  ASYNC_RUNTIME_INTEGRATION_COMPLETE.md  BORROW_CHECKER_STATUS.md  BUILTINS.md  BUILTIN_AUDIT.md  BUILTIN_TYPES_ARCHITECTURE.md  BUILTIN_TYPES_IMPLEMENTATION_GUIDE.md  BUILTIN_TYPES_QUICKSTART.md  CHECK_FEATS.md  CLOSURE_PARSER_FIX_SUMMARY.md  CLOSURE_TRAIT_COMPLETE.md  CODEGEN_GENERIC_IMPL_STRATEGY.md  COMPILER_INTEGRATION.md  COMPREHENSIVE_TYPE_SYSTEM_PLAN.md  CONSTANT_FOLDING_PROPOSAL.md  CORE_FEATURES_STATUS.md  CORE_STRATEGY.md  CRITICAL_BUGS_FIXED.md  Cargo.toml  DEBUGGING.md  DEFER_IMPLEMENTATION.md  ENCODING_AND_NETWORKING_PLAN.md  EXTENDED_OPERATORS.md  FFI_INTEGRATION_PLAN.md  FFI_LIBRARY_CATALOG.md  FFI_REQUIREMENTS.md  FILESYSTEM_IMPLEMENTATION.md  FIX_UNSAFE_VSCODE.md  GENERIC_SYSTEM.md  IMPLEMENTATION_REPORT_COMPREHENSIVE_TOOLING.md  IMPLEMENTATION_REPORT_ERROR_HANDLING.md  IMPLEMENTATION_REPORT_ISSUE_3.md  IMPLEMENTATION_REPORT_ISSUE_4.md  IMPORT_EXPORT_STATUS.md  INCOMPLETE_FEATURES_AUDIT.md  ITERATOR_SYSTEM_DESIGN.md  LANGUAGE_FEATURES.md  (+141 more)
.cargo/: config.toml
vex-cli/: Cargo.toml  ISSUES.md  README.md
vex-cli/src/: main.rs
vex-clibs/vex_datetime/: CMakeLists.txt  Golang_Refs.md  Makefile  README.md
vex-clibs/vex_datetime/examples/: time_demo.c
vex-clibs/vex_datetime/include/: vex_time.h
vex-clibs/vex_datetime/src/: vex_time_common.c  vex_time_posix.c  vex_time_win.c
vex-compiler/: Cargo.toml  build.rs
vex-compiler/src/: builtin_contracts.rs  codegen.rs  diagnostics.rs  lib.rs  module_resolver.rs  prelude_loader.rs  trait_bounds_checker.rs  type_registry.rs  visibility.rs
vex-compiler/src/borrow_checker/: borrows.rs  builtin_metadata.rs  builtins_list.rs  closure_analysis.rs  closure_traits.rs  errors.rs  immutability.rs  lifetimes.rs  mod.rs  moves.rs  orchestrator.rs
vex-compiler/src/codegen_ast/: analysis.rs  associated_types.rs  builtins.rs  compilation.rs  constants.rs  control_flow.rs  declaration.rs  defer.rs  destructors.rs  diagnostic_helpers.rs  drop_trait.rs  enums.rs  ffi.rs  ffi_bridge.rs  functions.rs  generics.rs  inline_optimizer.rs  memory_management.rs  metadata.rs  methods.rs  mod.rs  program.rs  registration.rs  registry.rs  safe_llvm.rs  scope_management.rs  statements.rs  string_conversion.rs  struct_def.rs  traits.rs  type_analysis.rs  types.rs  types_old.rs  variables.rs
vex-compiler/src/linter/: dead_code.rs  mod.rs  naming_convention.rs  unreachable_code.rs  unused_variables.rs
vex-compiler/src/prelude/: box.vx  builtin_contracts.vx  lib.vx  mod.rs  ops.vx  string.vx
vex-compiler/src/resolver/: mod.rs  platform.rs  stdlib_resolver.rs
vex-compiler/src/type_system/: coercion_rules.rs  mod.rs
vex-compiler/src/types/: interner.rs
vex-compiler/src/utils/: checked.rs  llvm_safety.rs  mod.rs  safe_arithmetic.rs
vex-compiler/tests/: phase1_type_inference.rs  phase2_method_instantiation.rs
vex-formatter/: Cargo.toml  README.md
vex-formatter/src/: config.rs  formatter.rs  lib.rs  visitor.rs
vex-formatter/src/rules/: expressions.rs  imports.rs  indentation.rs  mod.rs  spacing.rs
vex-formatter/tests/: test_box.rs
vex-lsp/: Cargo.toml  IMPORT_RESOLUTION_IMPLEMENTATION.md  LSP_ISSUES.md  SHUTDOWN_FIX.md
vex-lsp/src/: backend.rs  code_actions.rs  diagnostics.rs  document_cache.rs  lib.rs  main.rs  module_resolver.rs  refactorings.rs  symbol_resolver.rs
vex-lsp/src/backend/: code_actions.rs  core.rs  diagnostics.rs  document.rs  formatting.rs  language_features.rs  language_features.rs.bak  mod.rs  semantic_tokens.rs
vex-parser/: Cargo.toml
vex-parser/examples/: debug_parser_tokens.rs
vex-parser/src/: grammar.lalrpop  lib.rs
vex-parser/src/parser/: error_recovery.rs  expressions.rs  items.rs  mod.rs  operators.rs  patterns.rs  primaries.rs  statements.rs  types.rs
vex-parser/tests/: test_inline_method_warnings.rs  test_operator_methods.rs
vex-pm/: Cargo.toml
vex-pm/src/: build.rs  cache.rs  cli.rs  commands.rs  git.rs  lib.rs  lockfile.rs  manifest.rs  native_linker.rs  platform.rs  resolver.rs
vex-runtime/: ARRAY_SAFETY.md  Cargo.toml  IMPLEMENTATION_STATUS.md  PERFORMANCE_PLAN.md  README.md  UTF8_SUPPORT.md  build.rs
vex-runtime/c/: .gitignore  INTEGRATION_STATUS.md  Makefile  PHASE_10_SUMMARY.md  PHASE_9_SUMMARY.md  README.md  VEX_MACROS_README.md  build.sh  build_swisstable.sh  critique.md  vex.h  vex_alloc.c  vex_allocator.h  vex_args.c  vex_array.c  vex_async.c  vex_box.c  vex_channel.c  vex_channel.h  vex_cmd.c  vex_compress.c  vex_cpu.c  vex_display.c  vex_error.c  vex_file.c  vex_format.c  vex_intrinsics.h  vex_io.c  vex_io_optimized.c  vex_macros.h  vex_math.c  vex_memory.c  vex_mmap.c  vex_option.c  vex_path.c  vex_range.c  vex_regex.c  vex_result.c  vex_set.c  vex_simd_url.c  (+16 more)
vex-runtime/c/async_runtime/: BENCHMARK_RESULTS.md  CHANGES_PRO.md  FINAL_TEST_REPORT.md  MANUAL_TEST_VEXNET.md  Makefile  PERFORMANCE_REPORT.md  README_vex_async_runtime.md  VEXNET_INTEGRATION.md  VEXNET_INTEGRATION_STATUS.md  async_runtime_demo  benchmark_pooled  benchmark_pooled.c  benchmark_synthetic  benchmark_synthetic.c  demo_notimer.c  demo_with_timer  demo_with_timer.c  quick_test.sh  quick_test_vexnet.sh  run_tests.sh
vex-runtime/c/swisstable/: CHANGELOG.md  INDEX.md  Makefile  README.md  SWISSTABLE_OPTIMIZATION_PLAN.md  SWISSTABLE_RESULTS.md  VERSIONS.md  bench_main  bench_ultimate.c  bench_v1_vs_v2.c  bench_v2_vs_v3  bench_v2_vs_v3.c  build_swisstable.sh  build_swisstable_ultra.sh  insert_analysis.c  vex_swisstable.c  vex_swisstable_bench.c  vex_swisstable_bench_delete.c  vex_swisstable_optimized.h  vex_swisstable_test  vex_swisstable_v2.c  vex_swisstable_v3.c
vex-runtime/c/tests/: COVERAGE_GUIDE.md  README.md  README_EXAMPLES.md  bench_buildtime  bench_buildtime_regex.c  bench_regex_jit  bench_regex_jit.c  example_fuzz.c  example_tests  example_tests.c  ping_result.txt  simple_ping_test  simple_ping_test.c  test_cmd_stream.c  (+1 more)
vex-runtime/src/: async_runtime.rs  lib.rs  native_runtime.rs  simdutf_ffi.rs  tokio_ffi.rs
(+1827 files in other folders)
