[workspace]
members = [
    "vex-lexer",
    "vex-parser", 
    "vex-ast",
    "vex-compiler",
    "vex-runtime",
    "vex-cli",
    "vex-lsp",
    "vex-diagnostics",
    "vex-pm",
    "vex-formatter",
]
resolver = "2"

[workspace.lints.clippy]
unwrap_used = "deny"        # No .unwrap() in production
expect_used = "warn"        # Discourage .expect()
panic = "deny"              # No panic!()
indexing_slicing = "warn"   # Discourage arr[i]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Vex Language Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/vex_lang"
[build]
rustflags = ["-Z", "threads=8"]
[workspace.dependencies]
# Lexer & Parser
logos = "0.15.1"
lalrpop = "0.22.2"
lalrpop-util = "0.22.2"

# LLVM Backend
inkwell = { version = "0.7", features = ["llvm21-1"] }

# SPIR-V Backend
rspirv = "0.12"
spirv = "0.3"

# Async Runtime
tokio = { version = "1.48", features = ["full"] }
tokio-uring = "0.5"

# CLI
clap = { version = "4.5.51", features = ["derive"] }

# Utilities
thiserror = "1.0"
anyhow = "1.0"
dashmap = "6.0"  # For type interning
typed-arena = "2.0"  # For AST arena allocation
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
