[package]
name = "vex-compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vex-ast = { path = "../vex-ast" }
vex-lexer = { path = "../vex-lexer" }
vex-parser = { path = "../vex-parser" }
vex-pm = { path = "../vex-pm" }
inkwell.workspace = true
rspirv.workspace = true
spirv.workspace = true
thiserror.workspace = true
anyhow.workspace = true
colored = "2.1"
vex-diagnostics = { version = "0.2.0", path = "../vex-diagnostics" }
