[package]
name = "vex-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vex-lsp"
path = "src/main.rs"

[dependencies]
vex-ast = { path = "../vex-ast" }
vex-lexer = { path = "../vex-lexer" }
vex-parser = { path = "../vex-parser" }
vex-compiler = { path = "../vex-compiler" }
vex-formatter = { path = "../vex-formatter" }
vex-diagnostics = { path = "../vex-diagnostics" }

# LSP Protocol
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"

# Utilities
anyhow = "1.0"
dashmap = "5.5"
