[package]
name = "vex-pm"
version = "0.1.0"
edition = "2021"
authors = ["Vex Language Team"]
description = "Package manager for the Vex programming language"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
regex = "1.10"
sha2 = "0.10"
dirs = "5.0"
which = "6.0"
chrono = { version = "0.4", features = ["serde"] }
