[package]
name = "vex-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

# Tokio async runtime (FULL FEATURED)
tokio = { version = "1.35", features = ["full", "tracing"] }

# Optional: io_uring for high-performance I/O on Linux
io-uring = { version = "0.6", optional = true }
tokio-uring = { version = "0.4", optional = true }

# FFI utilities
libc = "0.2"
num_cpus = "1.16"

# C FFI for simdutf (we'll link externally)
# Note: simdutf must be installed on system
# Linux: sudo apt install libsimdutf-dev
# macOS: brew install simdutf
# Windows: vcpkg install simdutf

[features]
default = ["tokio-runtime"]
tokio-runtime = []  # Tokio async runtime (default)
io-uring-backend = ["io-uring", "tokio-uring"]  # io_uring event loop
simdutf = []  # Enable simdutf FFI bindings (requires libsimdutf)
