[package]
name = "vex-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
anyhow.workspace = true
log.workspace = true

# FFI utilities
libc = "0.2"
num_cpus = "1.16"

# C FFI for simdutf (we'll link externally)
# Note: simdutf must be installed on system
# Linux: sudo apt install libsimdutf-dev
# macOS: brew install simdutf
# Windows: vcpkg install simdutf

[build-dependencies]
cc = "1.0"

[features]
default = ["native-runtime"]
native-runtime = []  # C-based M:N async runtime (default)
simdutf = []  # Enable simdutf FFI bindings (requires libsimdutf)
